# models/Notification.js
@@ -1,0 +1,20 @@
+const mongoose = require("mongoose");
+
+const notificationSchema = new mongoose.Schema({
+  title: {
+    type: String,
+    required: true,
+  },
+  message: {
+    type: String,
+    required: true,
+  },
+  createdAt: {
+    type: Date,
+    default: Date.now,
+  },
+});
+
+const Notification = mongoose.model("Notification", notificationSchema);
+
+module.exports = Notification;
